[gd_scene load_steps=2 format=3 uid="uid://brpw2ma5rh5gj"]

[ext_resource type="Script" uid="uid://bsoj4d8nxc8m0" path="res://main.gd" id="1_ig7tw"]

[node name="main" type="Node2D"]
script = ExtResource("1_ig7tw")

[node name="Background" type="ColorRect" parent="."]
offset_right = 1152.0
offset_bottom = 648.0
color = Color(0.15, 0.15, 0.2, 1)

[node name="GameTitle" type="Label" parent="."]
offset_left = 320.0
offset_top = 20.0
offset_right = 832.0
offset_bottom = 70.0
theme_override_colors/font_color = Color(1, 0.9, 0.6, 1)
theme_override_font_sizes/font_size = 40
text = "Life Balance"
horizontal_alignment = 1

[node name="StatsPanel" type="Panel" parent="."]
offset_left = 20.0
offset_top = 20.0
offset_right = 280.0
offset_bottom = 380.0

[node name="PanelTitle" type="Label" parent="StatsPanel"]
layout_mode = 0
offset_left = 10.0
offset_top = 10.0
offset_right = 250.0
offset_bottom = 45.0
theme_override_colors/font_color = Color(1, 0.9, 0.6, 1)
theme_override_font_sizes/font_size = 24
text = "Your Stats"
horizontal_alignment = 1

[node name="money" type="Label" parent="StatsPanel"]
layout_mode = 0
offset_left = 20.0
offset_top = 60.0
offset_right = 240.0
offset_bottom = 95.0
theme_override_colors/font_color = Color(0.4, 0.8, 0.4, 1)
theme_override_font_sizes/font_size = 24
text = "üí∞ Money: 100"

[node name="happiness" type="Label" parent="StatsPanel"]
layout_mode = 0
offset_left = 20.0
offset_top = 110.0
offset_right = 240.0
offset_bottom = 145.0
theme_override_colors/font_color = Color(1, 0.4, 0.5, 1)
theme_override_font_sizes/font_size = 24
text = "‚ù§Ô∏è Happiness: 100"

[node name="social" type="Label" parent="StatsPanel"]
layout_mode = 0
offset_left = 20.0
offset_top = 160.0
offset_right = 240.0
offset_bottom = 195.0
theme_override_colors/font_color = Color(0.5, 0.6, 1, 1)
theme_override_font_sizes/font_size = 24
text = "üë• Social: 100"

[node name="energy" type="Label" parent="StatsPanel"]
layout_mode = 0
offset_left = 20.0
offset_top = 210.0
offset_right = 240.0
offset_bottom = 245.0
theme_override_colors/font_color = Color(1, 0.9, 0.3, 1)
theme_override_font_sizes/font_size = 24
text = "‚ö° Energy: 100"

[node name="Separator" type="ColorRect" parent="StatsPanel"]
layout_mode = 0
offset_left = 20.0
offset_top = 260.0
offset_right = 240.0
offset_bottom = 263.0
color = Color(0.5, 0.5, 0.5, 1)

[node name="stage" type="Label" parent="StatsPanel"]
layout_mode = 0
offset_left = 20.0
offset_top = 280.0
offset_right = 240.0
offset_bottom = 340.0
theme_override_colors/font_color = Color(0.9, 0.9, 0.9, 1)
theme_override_font_sizes/font_size = 20
text = "Stage: 1 (0/6 cards)
Young Adult"
vertical_alignment = 1

[node name="InstructionLabel" type="Label" parent="."]
offset_left = 320.0
offset_top = 80.0
offset_right = 832.0
offset_bottom = 115.0
theme_override_colors/font_color = Color(0.8, 0.8, 0.8, 1)
theme_override_font_sizes/font_size = 18
text = "Choose a card to make a decision"
horizontal_alignment = 1

[node name="card_container" type="HBoxContainer" parent="."]
offset_left = 320.0
offset_top = 130.0
offset_right = 1132.0
offset_bottom = 620.0
theme_override_constants/separation = 30
alignment = 1

[node name="reveal_overlay" type="ColorRect" parent="."]
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 1152.0
offset_bottom = 648.0
color = Color(0, 0, 0, 0.85)

[node name="reveal_panel" type="Panel" parent="reveal_overlay"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -350.0
offset_top = -150.0
offset_right = 350.0
offset_bottom = 150.0
grow_horizontal = 2
grow_vertical = 2

[node name="reveal_title" type="Label" parent="reveal_overlay/reveal_panel"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_top = 30.0
offset_bottom = 80.0
grow_horizontal = 2
theme_override_colors/font_color = Color(1, 0.9, 0.6, 1)
theme_override_font_sizes/font_size = 32
text = "Card Effects Revealed!"
horizontal_alignment = 1

[node name="reveal_effects" type="Label" parent="reveal_overlay/reveal_panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -300.0
offset_top = -20.0
offset_right = 300.0
offset_bottom = 60.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 42
text = "üí∞+50 ‚ù§Ô∏è-20 üë•+0 ‚ö°-30"
horizontal_alignment = 1

[node name="reveal_timer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="typing_overlay" type="ColorRect" parent="."]
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 1152.0
offset_bottom = 648.0
color = Color(0, 0, 0, 0.9)

[node name="typing_panel" type="Panel" parent="typing_overlay"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -450.0
offset_top = -200.0
offset_right = 450.0
offset_bottom = 200.0
grow_horizontal = 2
grow_vertical = 2

[node name="typing_text" type="Label" parent="typing_overlay/typing_panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 40.0
offset_top = 40.0
offset_right = -40.0
offset_bottom = -40.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 24
text = "Description appears here..."
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[node name="typing_timer" type="Timer" parent="."]
wait_time = 0.05

[node name="typing_sound" type="AudioStreamPlayer" parent="."]

[connection signal="timeout" from="reveal_timer" to="." method="_on_reveal_timer_timeout"]
[connection signal="timeout" from="typing_timer" to="." method="_on_typing_timer_timeout"]
